fix:修复Prometheus